# fraud-detection

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-airflow  Dockerfile-base  Dockerfile-fastapi  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements-base.txt  requirements-fastapi.txt  requirements.txt
airflow/dags/: batch_scoring_dag.py
api/: main.py  model_loader.py
data/: split csv file.py
notebooks/: Fraud_Detection_Neural_Network.ipynb  Train_data_processing.ipynb  XGB_Optuna_search.ipynb
results/: Autoencoder_metrics.json  IsolationForest_metrics.json  LightGBM_metrics.json  XGB_metrics.json  alerts.json  optuna_trials_140.db
src/: Input_data_processing.py  Train_Autoencoder.py  Train_IsolationForest.py  Train_LightGBM.py  Train_XGB.py  Train_data_processing.py  config.py
src/api/: main.py
src/batch_scoring/: batch_scorer.py  spark_preprocessing.py
src/data_preprocessing/: feature_engineering.py  utils.py
src/data_processing/: utils.py
src/experiments/: Input_data_processing.py  Train_Autoencoder.py  Train_IsolationForest.py  Train_LightGBM.py  Train_Neural_Network.py  Train_XGB.py  Train_data_processing.py
src/models/: NN_model.pth  autoencoder.pth
src/pipeline/: inference_pipeline.py  training_pipeline.py
src/pipeline/mlruns/0/: meta.yaml
src/pipeline/mlruns/580364971090022163/: meta.yaml
src/pipeline/mlruns/580364971090022163/1f4f8470aecb49c69ef3c122a4d780d8/: meta.yaml
src/pipeline/mlruns/580364971090022163/1f4f8470aecb49c69ef3c122a4d780d8/metrics/: f1_score  pr_auc  precision  recall  roc_auc
(+7 files in other folders)
